--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -5,6 +5,7 @@ description: Demonstrates how to use the pip_flutter plugin.
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
+version: 1.0.0+1
 environment:
   sdk: ">=2.15.0-211.0.dev <3.0.0"
 
