--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,19 +4,20 @@ version: 0.0.3
 homepage: https://github.com/kesmitopiwala/pip_flutter/blob/master/example/lib/main.dart
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.20.0"
+  sdk: '>=2.18.0 <4.0.0'
+  flutter: '>=3.3.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  wakelock: ^0.5.6
-  visibility_detector: ^0.2.0
-  xml: ^5.3.0
+  visibility_detector: ^0.4.0+2
+  wakelock_plus:
+  xml: ^6.1.0
   pedantic: ^1.11.1
   flutter_widget_from_html_core: ^0.10.4
   path_provider: ^2.0.5
-  collection: ^1.15.0
+  collection: ^1.17.0
+  file: 6.1.4
 
 dev_dependencies:
   flutter_test:
