--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   visibility_detector: ^0.4.0+2
-  wakelock_plus:
-  xml: ^6.1.0
+  wakelock:
+  xml: ^5.0.0
   pedantic: ^1.11.1
   flutter_widget_from_html_core: ^0.10.4
   path_provider: ^2.0.5
